# src/main/kotlin/models/RoommateMatch.kt
@@ -1,0 +1,10 @@
+package com.models
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class RoommateMatch(
+    val roommateId: String,
+    val matchScore: Int,
+)
+
